// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`serializeToRuntimeReadyProject > omits compiled config when no config blocks are present 1`] = `
{
  "binaryAssets": [],
  "codeBlocks": [],
  "compiledConfig": {
    "disableAutoCompilation": false,
    "memorySizeBytes": 1048576,
    "runtimeSettings": [
      {
        "runtime": "WebWorkerLogicRuntime",
        "sampleRate": 50,
      },
    ],
    "selectedRuntime": 0,
  },
  "compiledModules": {},
  "viewport": {
    "gridCoordinates": {
      "x": 0,
      "y": 0,
    },
  },
}
`;

exports[`serializeToRuntimeReadyProject > serializes runtime-ready project with compiled config 1`] = `
{
  "binaryAssets": [],
  "codeBlocks": [
    {
      "code": [
        "config",
        "memorySizeBytes 65536",
        "configEnd",
      ],
      "gridCoordinates": {
        "x": 0,
        "y": 0,
      },
    },
  ],
  "compiledConfig": {
    "disableAutoCompilation": false,
    "memorySizeBytes": 65536,
    "runtimeSettings": [
      {
        "runtime": "WebWorkerLogicRuntime",
        "sampleRate": 50,
      },
    ],
    "selectedRuntime": 0,
  },
  "compiledModules": {
    "mod": {},
  },
  "compiledWasm": "b64:1",
  "memorySnapshot": "b64:2,0",
  "viewport": {
    "gridCoordinates": {
      "x": 0,
      "y": 0,
    },
  },
}
`;
